<resources>
    <string name="app_name">Login</string>

    <string name="password_label">Password</string>
    <string name="clear_button_label">Clear</string>
    <string name="login_button_label">Login</string>
    <string name="password_hint">Default is Blank</string>

    <string name="register_label">Register</string>
    <string name="re_enter_password_label">Re-enter Password</string>
    <string name="name_label">Full Name</string>
    <string name="username_label">Username</string>

    <string name="parent_title_income">Income</string>
    <string name="parent_title_exp">Expenditure</string>
    <string name="parent_title_balance">Balance</string>

    <!-- Titles for activities -->
    <string name="add_label">Add New Item</string>
    <string name="overview_label">Current Month</string>
    <string name="edit_label">Edit Item</string>
    <string name="delete_label">Delete Item</string>

    <string name="type_label">Type</string>

    <!-- Item Types -->
    <string-array name="income_types">
        <item>Salary/Wage</item>
        <item>Gift</item>
        <item>Loan</item>
        <item>Other</item>
    </string-array>

    <string-array name="expenditure_types">
        <item>Food</item>
        <item>Rent</item>
        <item>Utilities</item>
        <item>Luxury</item>
    </string-array>
    <!-- End Item Types -->

    <!-- Months -->
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!-- Years -->
    <string-array name="years">
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
    </string-array>

    <!-- Actionbar Strings -->
    <string name="add_item">Add Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="settings">Settings</string>
    <string name="remove_item">Remove Item</string>
    <string name="home">Home</string>
    <string name="back">Go Back</string>

    <!--  Error Messages  -->
    <string name="login_error_incorrect">Password is incorrect</string>
    <string name="registration_error_missing_fields">Not all fields have been filled</string>
    <string name="registration_error_passwords">Passwords don\'t match</string>
    <string name="registration_username_already_exists">Username already exists</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <!--  End of Error Messages  -->


    <string-array name="parent_titles">
        <item>Income</item>
        <item>Expenditure</item>
        <item>Balance</item>
    </string-array>

    <string-array name="income_dummy_names">
        <item>work</item>
        <item>gift</item>
        <item>more work</item>
    </string-array>

    <string-array name="income_dummy_values">
        <item>120.00</item>
        <item>20.00</item>
        <item>40.00</item>
    </string-array>

    <string-array name="exp_dummy_names">
        <item>harddrive</item>
        <item>lunch</item>
        <item>dinner</item>
    </string-array>

    <string-array name="exp_dummy_values">
        <item>100.00</item>
        <item>5.00</item>
        <item>10.00</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
