<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.niallod.quickbudget.activities.EditItem">

    <item
        android:id="@+id/action_back_arrow"
        android:title="@string/back"
        android:icon="@mipmap/ic_keyboard_backspace_black_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add_item"
        android:title="@string/add_item"
        android:icon="@mipmap/ic_add_black_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_remove_item"
        android:icon="@mipmap/ic_remove_black_24dp"
        android:title="@string/remove_item"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_home_item"
        android:icon="@mipmap/ic_home_black_24dp"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@mipmap/ic_settings_black_24dp"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

</menu>