<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.niallod.quickbudget.activities.MainActivity">

    <item
        android:id="@+id/action_add_item"
        android:title="@string/add_item"
        android:icon="@mipmap/ic_note_add_black_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_remove_item"
        android:icon="@mipmap/ic_delete_black_24dp"
        android:title="@string/remove_item"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit_item"
        android:icon="@mipmap/ic_create_black_24dp"
        android:title="@string/edit_item"
        app:showAsAction="ifRoom" />

</menu>