<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.niallod.quickbudget.Registration">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/username_label"
        android:ems="10"
        android:id="@+id/username_reg"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_label"
        android:ems="10"
        android:id="@+id/password_reg"
        android:layout_below="@+id/username_reg"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/re_enter_password_label"
        android:ems="10"
        android:layout_below="@+id/password_reg"
        android:id="@+id/re_enter_password_reg"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />



    <android.support.v4.widget.Space
        android:id="@+id/space"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="0dp"
        android:layout_height="20dp"/>

    <Button
        android:text="@string/login_button_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/to_login_page"
        android:layout_alignEnd="@+id/space" />

    <Button
        android:text="@string/register_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/space"
        android:id="@+id/register" />


</RelativeLayout>
