<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.niallod.quickbudget.MainMenu">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_input"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/password_hint"/>

    <TextView
        android:text="@string/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_input"
        android:id="@+id/password_label"
        android:layout_alignEnd="@+id/password_input"
        android:layout_alignStart="@+id/password_input" />

    <Button
        android:text="@string/login_button_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_input"
        android:layout_alignEnd="@+id/password_input"
        android:layout_marginTop="85dp"
        android:id="@+id/login_button" />

    <Button
        android:text="@string/clear_button_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clear_button"
        android:layout_alignBaseline="@+id/login_button"
        android:layout_alignBottom="@+id/login_button"
        android:layout_alignStart="@+id/password_input" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/error_message"
        android:layout_alignBottom="@+id/password_input"
        android:layout_alignStart="@+id/password_input"
        android:layout_alignEnd="@+id/password_input" />

</RelativeLayout>
